--- a/build.gradle
+++ b/build.gradle
@@ -182,3 +182,15 @@ test {
         events 'passed', 'skipped', 'failed'
     }
 }
+
+gradleEnterprise {
+
+    buildScan {
+
+        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+
+        termsOfServiceAgree = 'yes'
+
+    }
+
+}
